test/fail/type-parameter-count-none-in-type.grace
type {
  name
}.assert(object {
  method name(param) {}
})
